chapter-06/cluster-apk8s-dev4/003-data/005-keycloak/30-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web-keycloak
  namespace: data
spec:
  serviceName: web-keycloak
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: web-keycloak
  template:
    metadata:
      labels:
        app: web-keycloak
    spec:
      containers:
        - name: web-keycloak
          image: jboss/keycloak:6.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-web
              containerPort: 8080
          volumeMounts:
            - name: keycloak-db
              mountPath: /opt/jboss/keycloak/standalone/data
  volumeClaimTemplates:
    - metadata:
        name: keycloak-db
      spec:
        storageClassName: rook-ceph-block
        accessModes: [ ReadWriteOnce ]
        resources:
          requests:
            storage: 5Gi
