chapter-06/cluster-apk8s-dev4/003-data/005-keycloak/10-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-keycloak
  namespace: data
spec:
  selector:
    app: web-keycloak
  ports:
    - name: http-web
      protocol: "TCP"
      port: 8080
      targetPort: http-web
  type: ClusterIP
