chapter-06/cluster-apk8s-dev4/003-data/005-keycloak/50-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-auth
  namespace: data
  labels:
    app: web-auth
spec:
  rules:
    - host: auth.data.dev4.apk8s.dev
      http:
        paths:
          - backend:
              serviceName: web-keycloak
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - auth.data.dev4.apk8s.dev
      secretName: data-production-tls
